--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,8 @@ NODE_ENV=development
 PORT=3000
 CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173,http://localhost:5178,http://127.0.0.1:5178,tauri://localhost,http://tauri.localhost
 
-# Database (SQLite)
+# Database (sqlite for local dev, supabase for production)
+DB_TYPE=sqlite
 DB_PATH=./data/grump.db
 
 # Redis (optional; rate limiting, cache, BullMQ)
