--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,19 +1,12 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "version": 2,
-    "builds": [
+    "buildCommand": "npm run vercel-build",
+    "outputDirectory": ".",
+    "rewrites": [
         {
-            "src": "dist/index.js",
-            "use": "@vercel/node"
+            "source": "/(.*)",
+            "destination": "/api"
         }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "dist/index.js"
-        }
-    ],
-    "env": {
-        "NODE_ENV": "production"
-    }
+    ]
 }
