--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@supabase/supabase-js": "^2.91.1",
     "axios": "^1.6.0",
     "diff": "^8.0.3",
+    "lucide-svelte": "^0.344.0",
     "mermaid": "^10.9.0",
     "shiki": "^1.0.0",
     "svelte": "^5.0.0"
