--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "@supabase/supabase-js": "^2.91.1",
     "axios": "^1.6.0",
     "diff": "^8.0.3",
-    "lucide-svelte": "^0.344.0",
+    "lucide-svelte": "^0.563.0",
     "mermaid": "^10.9.0",
     "shiki": "^1.0.0",
     "svelte": "^5.0.0"
@@ -41,6 +41,7 @@
     "@tauri-apps/cli": "^2.9.6",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
     "@typescript-eslint/parser": "^8.53.1",
+    "@vitest/coverage-v8": "^1.6.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
@@ -55,7 +56,6 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
-    "vitest": "^1.6.0",
-    "@vitest/coverage-v8": "^1.6.0"
+    "vitest": "^1.6.0"
   }
 }
