UI/UX upgrade: Cleaner design, Slate-50 background, polished components, and production build check

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,11 +2,18 @@
 ANTHROPIC_API_KEY=your_api_key_here
 
 # Server
+# Local development:
 NODE_ENV=development
 PORT=3000
 CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173,http://localhost:5178,http://127.0.0.1:5178,tauri://localhost,http://tauri.localhost
 
-# Database (sqlite for local dev, supabase for production)
+# In Vercel production, set the following via the Vercel dashboard or CLI:
+#   NODE_ENV=production
+#   CORS_ORIGINS=https://your-frontend-domain.com
+
+# Database
+# - Local development: SQLite is fine and persists on disk.
+# - Vercel / serverless: SQLite will NOT persist between invocations – use Supabase instead.
 DB_TYPE=sqlite
 DB_PATH=./data/grump.db
 
@@ -21,6 +28,7 @@ REQUIRE_AUTH_FOR_API=false
 
 # Webhooks
 GRUMP_WEBHOOK_SECRET=
+GRUMP_WEBHOOK_URLS=
 
 # Intent compiler (optional; omit to use Claude-only fallback)
 GRUMP_INTENT_PATH=
