--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.91.1",
     "diff": "^8.0.3",
-    "mermaid": "^10.9.0",
-    "shiki": "^1.0.0",
+    "@supabase/supabase-js": "^2.91.1",
+    "diff": "^8.0.3",
     "svelte": "^5.0.0"
   },
   "devDependencies": {
