--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.1",
-    "diff": "^8.0.3",
+    "@supabase/supabase-js": "^2.91.1",
     "@supabase/supabase-js": "^2.91.1",
     "diff": "^8.0.3",
     "svelte": "^5.0.0"
