--- a/backend/package.json
+++ b/backend/package.json
@@ -57,13 +57,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
-    "node-cron": "^3.0.3",
     "express-validator": "^7.3.1",
     "helmet": "^8.1.0",
     "ioredis": "^5.3.2",
+    "node-cron": "^3.0.3",
     "opossum": "^5.0.1",
     "pino": "^10.3.0",
     "pino-http": "^11.0.0",
+    "playwright": "^1.58.0",
     "prom-client": "^15.1.3",
     "rate-limit-redis": "^4.3.1",
     "stripe": "^17.4.0",
