refactor: add shared-types package, fix frontend Phase 1.1 types
- Create packages/shared-types with typed interfaces for architecture, prd, spec, agents, plan, ship, clarification, and creativeDesignDoc

- Update frontend to import from @grump/shared-types, replacing 'any' types with proper types

- Delete root vercel.json (conflicts with separate frontend/backend deploy strategy)

- Add packages/shared-types to workspace config

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "workspaces": [
     "frontend",
     "backend",
-    "docs-site"
+    "docs-site",
+    "packages/shared-types"
   ],
   "description": "AI-powered Mermaid diagram generator",
   "scripts": {
