--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "tauri:build": "tauri build"
   },
   "dependencies": {
+    "@grump/shared-types": "*",
     "@supabase/supabase-js": "^2.91.1",
     "diff": "^5.2.0",
     "mermaid": "^10.9.0",
