--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,8 @@ ANTHROPIC_API_KEY=your_api_key_here
 
 # NVIDIA NIM (Kimi K2.5, Nemotron, etc.) – optional; for nim provider and RAG
 NVIDIA_NIM_API_KEY=
+# Local/self-hosted NIM base URL (e.g. http://nim:8000). When set, /v1 is appended if missing. Omit for cloud.
+NVIDIA_NIM_URL=
 # Embedding batch tuning (optional): NIM_EMBED_BATCH_SIZE (default 256), NIM_EMBED_MAX_WAIT_MS (default 50)
 NIM_EMBED_BATCH_SIZE=
 NIM_EMBED_MAX_WAIT_MS=
@@ -41,6 +43,10 @@ GRUMP_WEBHOOK_URLS=
 
 # Intent compiler (optional; omit to use Claude-only fallback)
 GRUMP_INTENT_PATH=
+# Use WASM intent parser when available (true/1); fallback to CLI otherwise
+GRUMP_USE_WASM_INTENT=
+# Offload intent parsing to worker pool (true/1); worker runs CLI
+GRUMP_USE_WORKER_POOL_INTENT=
 
 # Supabase (leave as-is for mock mode, or replace with real credentials)
 SUPABASE_URL=https://your-project.supabase.co
