--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,6 +124,23 @@ jobs:
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
 
+  lint-and-audit:
+    name: Lint and Audit Gate
+    runs-on: ubuntu-latest
+    needs: [lint-backend, lint-frontend, security-audit]
+    steps:
+      - run: echo "Lint and audit passed"
+
+  docker-compose-gpu-config:
+    name: Validate Docker Compose GPU
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Validate docker-compose + GPU override
+        run: |
+          docker compose -f docker-compose.yml -f docker-compose.gpu.yml config > /dev/null
+          echo "GPU compose config valid"
+
   # Job 3: Build Rust (runs in parallel)
   build-rust:
     name: Build Rust Intent Compiler
@@ -347,11 +364,11 @@ jobs:
           directory: frontend/coverage
           flags: frontend
 
-  # Job 8: Docker Build (runs after all tests pass)
+  # Job 8: Docker Build (runs after all tests + e2e pass)
   docker-build:
     name: Build Docker Images
     runs-on: ubuntu-latest
-    needs: [test-backend, test-frontend, build-rust, security-audit]
+    needs: [test-backend, test-frontend, test-e2e, build-rust, security-audit]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
@@ -396,80 +413,6 @@ jobs:
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
-
-  test-backend:
-    name: Backend Tests
-    runs-on: ubuntu-latest
-    needs: lint-and-audit
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
-      
-      - name: Install dependencies
-        working-directory: backend
-        run: npm ci
-      
-      - name: Install coverage dependencies
-        working-directory: backend
-        run: npm install --save-dev @vitest/coverage-v8
-
-      - name: Run unit tests with coverage
-        working-directory: backend
-        run: npm run test:coverage:ci
-        env:
-          ANTHROPIC_API_KEY: test_key_for_unit_tests
-
-      - name: Upload coverage reports
-        uses: codecov/codecov-action@v4
-        with:
-          files: ./backend/coverage/coverage-final.json
-          flags: backend
-          name: backend-coverage
-          fail_ci_if_error: true
-
-  test-frontend:
-    name: Frontend Tests
-    runs-on: ubuntu-latest
-    needs: lint-and-audit
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
-      
-      - name: Install dependencies
-        working-directory: frontend
-        run: npm ci
-      
-      - name: Install coverage dependencies
-        working-directory: frontend
-        run: npm install --save-dev @vitest/coverage-v8
-
-      - name: Run unit tests with coverage
-        working-directory: frontend
-        run: npm run test:coverage:ci
-
-      - name: Upload coverage reports
-        uses: codecov/codecov-action@v4
-        with:
-          files: ./frontend/coverage/coverage-final.json
-          flags: frontend
-          name: frontend-coverage
-          fail_ci_if_error: true
-
-      - name: Build frontend
-        working-directory: frontend
-        run: npm run build
 
   test-e2e:
     name: E2E Tests
@@ -617,31 +560,3 @@ jobs:
           path: backend/data/rag-index.json
           retention-days: 7
 
-  build-docker:
-    name: Build Docker Images
-    runs-on: ubuntu-latest
-    needs: [test-backend, test-frontend, test-e2e]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
-      - name: Build backend image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          push: false
-          tags: mermaid-backend:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      
-      - name: Build frontend image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          push: false
-          tags: mermaid-frontend:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
