--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,9 @@
     "start": "node --import tsx src/index.ts",
     "start:prod": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
-    "build": "swc src -d dist --copy-files --strip-leading-paths && node scripts/copy-migrations.mjs",
+    "build": "swc src -d dist --copy-files && node scripts/copy-migrations.mjs",
     "build:tsc": "tsc && node scripts/copy-migrations.mjs",
-    "vercel-build": "swc src -d dist --copy-files --strip-leading-paths || true && node scripts/copy-migrations.mjs",
+    "vercel-build": "swc src -d dist --copy-files || true && node scripts/copy-migrations.mjs",
     "bundle": "npm run build && pkg . --out-path dist-bundle",
     "type-check": "tsc --noEmit",
     "lint": "eslint src",
@@ -24,7 +24,12 @@
     "load-test": "k6 run tests/load/k6-scenarios.js",
     "evals": "node --import tsx tests/evals/runEvals.ts",
     "mcp-server": "tsx src/mcp/grump-server.ts",
-    "rag:index": "tsx scripts/rag-index.ts"
+    "rag:index": "tsx scripts/rag-index.ts",
+    "deploy:setup": "../scripts/setup-vercel.sh",
+    "deploy:setup:win": "..\\scripts\\setup-vercel.bat",
+    "deploy:prod": "vercel --prod",
+    "deploy:preview": "vercel",
+    "env:add": "vercel env add"
   },
   "pkg": {
     "scripts": [
@@ -39,7 +44,6 @@
     "outputPath": "dist-bundle"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.71.2",
     "@grump/ai-core": "*",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.42.0",
@@ -81,6 +85,7 @@
     "@swc/core": "^1.3.107",
     "@types/async-retry": "^1.4.8",
     "@types/better-sqlite3": "^7.6.11",
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/ioredis": "^5.0.0",
