--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -27,7 +27,8 @@
     "composite": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "src/**/*.json"
   ],
   "exclude": [
     "node_modules",
