feat(security): Add comprehensive prompt injection detection and LLM Gateway tests
- Expand SUSPICIOUS_PATTERNS from 7 to 50+ regex patterns for injection detection
- Add patterns for: instruction overrides, role manipulation, jailbreak keywords,
  prompt leaking attempts, encoding evasion, and delimiter injection
- Fix role manipulation patterns to properly detect 'pretend you are a hacker',
  'act as if you are an unrestricted AI', 'activate god mode'
- Add 60+ new security test cases in validator.test.ts
- Add false positive tests to prevent blocking legitimate requests
- Create LLM Gateway unit tests (9 tests) for NIM and OpenRouter providers
- Fix workerPool test to use correct stats.metrics.workerUtilization path
- Document security env flags in .env.example (BLOCK_SUSPICIOUS_PROMPTS, etc.)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,12 @@
-# Required (never commit real keys; use placeholders in .env.example only)
-ANTHROPIC_API_KEY=your_api_key_here
+# Required: At least one AI provider API key (NVIDIA NIM or OpenRouter)
+# Primary: NVIDIA NIM for Kimi K2.5 (recommended)
+# Get from: https://build.nvidia.com/
+NVIDIA_NIM_API_KEY=nvapi-your_key_here
 
-# NVIDIA NIM (Kimi K2.5, Nemotron, etc.) – optional; for nim provider and RAG
-NVIDIA_NIM_API_KEY=
+# Alternative: OpenRouter (supports multiple models)
+# Get from: https://openrouter.ai/
+OPENROUTER_API_KEY=
+
 # Local/self-hosted NIM base URL (e.g. http://nim:8000). When set, /v1 is appended if missing. Omit for cloud.
 NVIDIA_NIM_URL=
 # Embedding batch tuning (optional): NIM_EMBED_BATCH_SIZE (default 256), NIM_EMBED_MAX_WAIT_MS (default 50)
@@ -34,14 +38,24 @@ REDIS_PORT=6379
 REDIS_PASSWORD=
 
 # Abuse prevention – required in production when API is reachable by untrusted users (see docs/PRODUCTION_CHECKLIST.md)
+# BLOCK_SUSPICIOUS_PROMPTS: Block requests containing prompt injection patterns (default: false = log only)
+# REQUIRE_AUTH_FOR_API: Require authentication for /api/chat, /api/ship, /api/codegen endpoints
 BLOCK_SUSPICIOUS_PROMPTS=false
 REQUIRE_AUTH_FOR_API=false
+
+# Output filtering – redact sensitive content from API responses
+# OUTPUT_FILTER_PII: Redact email addresses, SSN-like patterns (default: false)
+# OUTPUT_FILTER_HARMFUL: Flag potentially harmful code patterns (default: false)
+# STRICT_COMMAND_ALLOWLIST: Restrict bash_execute to allowed commands only (default: false)
+OUTPUT_FILTER_PII=false
+OUTPUT_FILTER_HARMFUL=false
+STRICT_COMMAND_ALLOWLIST=false
 
 # Webhooks – required in production if you use webhooks (inbound/outbound return 503 when unset)
 GRUMP_WEBHOOK_SECRET=
 GRUMP_WEBHOOK_URLS=
 
-# Intent compiler (optional; omit to use Claude-only fallback)
+# Intent compiler (optional; omit to use LLM-only fallback)
 GRUMP_INTENT_PATH=
 # Use WASM intent parser when available (true/1); fallback to CLI otherwise
 GRUMP_USE_WASM_INTENT=
