feat: Add advanced AI services, integrations platform, and documentation updates
Backend services:
- Add holographicMemory, recursiveDistillation, supervisedSwarm services
- Add swarmOrchestrator for multi-agent coordination
- Add approvalService, auditLogService, heartbeatService
- Add integrationService with cryptoService for secure token handling
- Add contextCompressor and predictivePreloader for performance
- Add secretsService for secure credential management
- Add migration 011_integrations_platform.sql

API routes:
- Add /api/advanced-ai endpoints for AI management
- Add /api/approvals for workflow approvals
- Add /api/heartbeats for service health monitoring
- Add /api/integrations-v2 for third-party integrations

Frontend components:
- Add AdvancedAIDashboard, ApprovalsCenter, AuditLogViewer
- Add HeartbeatsManager, IntegrationsHub, MemoryManager
- Enhance SessionsSidebar with improved UX
- Add advancedAiApi and integrationsApi client libraries

Infrastructure:
- Update Supabase schema with integrations tables
- Enhance database.ts and supabase-db.ts with new queries
- Update env.ts with new configuration options
- Update deployment scripts and documentation

Docs: Update architecture, setup, roadmap, and API reference docs

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,14 @@
 # REQUIRED VARIABLES - Must be set for deployment
 # ============================================
 
-# Anthropic API Key (required for AI features)
-# Get from: https://console.anthropic.com/
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# AI Provider API Key (at least one required)
+# Primary: NVIDIA NIM for Kimi K2.5 (recommended - 256K context, $0.6/M tokens)
+# Get from: https://build.nvidia.com/
+NVIDIA_NIM_API_KEY=nvapi-your_key_here
+
+# Alternative: OpenRouter (supports multiple models)
+# Get from: https://openrouter.ai/
+# OPENROUTER_API_KEY=sk-or-v1-your_key_here
 
 # ============================================
 # SERVER CONFIGURATION
@@ -74,8 +79,7 @@ REQUIRE_AUTH_FOR_API=true
 # TWILIO_REPLY_TO_NUMBER=...
 # TWILIO_WEBHOOK_SECRET=...
 
-# NVIDIA NIM (optional - for GPU acceleration)
-# NVIDIA_NIM_API_KEY=...
+# NVIDIA NIM self-hosted (optional - for on-prem deployment)
 # NVIDIA_NIM_URL=https://your-nim-endpoint
 
 # Webhooks
