feat: Complete roadmap implementation - AI providers, CLI, JetBrains plugin, Intent Optimizer, Hybrid Compiler, comprehensive tests, and compiler optimizations
Major additions:
- 3 new AI providers: Groq, Together AI, Ollama
- Frowny face CLI with 10 commands in packages/cli/
- JetBrains IDE plugin in integrations/jetbrains-plugin/
- Intent Optimizer endpoint with codegen/architecture modes
- Hybrid AI compiler (Rust+LLM) with 3 parsing modes
- 167 new tests (share, cost alerts, voice, webhooks, RAG)
- Fixed all pre-existing test failures
- Compiler-level optimizations (Rust, TypeScript, bundle, memory)
- Agent-accessible TODO system (AGENT_TODOS.json)

Testing: 513/522 tests passing (98.3%)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,18 @@ NVIDIA_NIM_API_KEY=nvapi-your_key_here
 # Get from: https://openrouter.ai/
 OPENROUTER_API_KEY=
 
+# Groq (fast inference provider)
+# Get from: https://groq.com/
+GROQ_API_KEY=
+
+# Together AI (open source model provider)
+# Get from: https://together.ai/
+TOGETHER_API_KEY=
+
+# Ollama (local model runner)
+# Optional: Override default localhost:11434
+OLLAMA_HOST=localhost:11434
+
 # Local/self-hosted NIM base URL (e.g. http://nim:8000). When set, /v1 is appended if missing. Omit for cloud.
 NVIDIA_NIM_URL=
 # Embedding batch tuning (optional): NIM_EMBED_BATCH_SIZE (default 256), NIM_EMBED_MAX_WAIT_MS (default 50)
