--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,18 @@ NVIDIA_NIM_API_KEY=nvapi-your_key_here
 # Get from: https://openrouter.ai/
 # OPENROUTER_API_KEY=sk-or-v1-your_key_here
 
+# Groq (fast inference provider)
+# Get from: https://groq.com/
+# GROQ_API_KEY=gsk-your_key_here
+
+# Together AI (open source model provider)
+# Get from: https://together.ai/
+# TOGETHER_API_KEY=your_key_here
+
+# Ollama (local model runner)
+# Optional: Override default localhost:11434
+# OLLAMA_HOST=localhost:11434
+
 # ============================================
 # SERVER CONFIGURATION
 # ============================================
