--- a/docs-site/package.json
+++ b/docs-site/package.json
@@ -2,6 +2,7 @@
     "name": "milesproject-docs",
     "version": "1.0.0",
     "description": "Documentation site for Miles Project",
+    "license": "MIT",
     "main": "index.js",
     "scripts": {
         "docs:dev": "vitepress dev",
