--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "grump-frontend",
   "version": "1.0.0",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -57,8 +58,10 @@
     "postcss": "^8.4.35",
     "prettier": "^3.8.1",
     "prettier-plugin-svelte": "^3.2.0",
+    "rollup-plugin-visualizer": "^5.14.0",
     "svelte-check": "^4.1.1",
     "tailwindcss": "^3.4.0",
+    "terser": "^5.30.0",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
     "vitest": "^1.6.0"
