--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,18 +1,25 @@
 {
   "name": "grump-cli",
-  "version": "2.0.0",
-  "description": "G-Rump CLI: ship, argument, plan, code, analyze (Optimized with caching, retry, and parallel support)",
+  "version": "3.0.0",
+  "description": "G-Rump CLI: A grumpy AI assistant that ships code (now with 100% more frowns)",
   "type": "module",
   "bin": {
     "grump": "./dist/index.js",
-    "grump-analyze": "./dist/index.js"
+    "grump-cli": "./dist/index.js"
   },
+  "files": [
+    "dist/",
+    "README.md"
+  ],
   "scripts": {
-    "build": "swc src -d dist --copy-files --strip-leading-paths",
+    "build": "swc src -d dist --copy-files",
     "build:tsc": "tsc",
     "build:native": "npm run build && pkg . --out-path dist-native",
     "start": "node dist/index.js",
-    "run": "node --import tsx src/index.ts"
+    "run": "node --import tsx src/index.ts",
+    "dev": "tsx watch src/index.ts",
+    "lint": "tsc --noEmit",
+    "clean": "node -e \"require('fs').rmSync('dist', { recursive: true, force: true }); require('fs').rmSync('dist-native', { recursive: true, force: true }); console.log('Cleaned!');\""
   },
   "pkg": {
     "scripts": [
@@ -25,15 +32,35 @@
     ],
     "outputPath": "dist-native"
   },
-  "dependencies": {},
+  "dependencies": {
+    "boxen": "^8.0.1",
+    "chalk": "^5.6.2",
+    "commander": "^12.1.0",
+    "conf": "^13.1.0",
+    "gradient-string": "^3.0.0",
+    "inquirer": "^12.11.1",
+    "ora": "^8.2.0"
+  },
   "devDependencies": {
     "@swc/cli": "^0.1.65",
     "@swc/core": "^1.3.107",
     "@types/node": "^20.11.0",
     "pkg": "^5.8.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=20"
-  }
+  },
+  "keywords": [
+    "cli",
+    "ai",
+    "code-generation",
+    "grump",
+    "g-rump",
+    "ship",
+    "workflow"
+  ],
+  "author": "G-Rump Team",
+  "license": "MIT"
 }
