feat: Enhanced CLI with 22 commands, purple branding, enhanced compiler, all fixes
CLI Enhancements:
- 12 NEW funny commands: rant, roast, excuse, blame, coffee, vibes, panic, shipit, docs, refactor, why, fortune
- STRICT purple #6B46C1/#8B5CF6/#A855F7 + white branding throughout
- Added compile command with all compiler flags
- 22 total CLI commands now available

Enhanced Compiler (packages/compiler-enhanced/):
- Incremental compilation with file hash tracking
- Watch mode with chokidar (300ms debounce)
- Bundle analyzer with treemap visualization
- Dead code elimination (mark & sweep)
- Parallel processing with worker threads
- Custom transform pipeline (plugin system)
- Source map generation (VLQ encoding)
- Hot reload WebSocket server
- Full test suite for all compiler features

Code Quality:
- Fixed all 27 TypeScript errors (return type annotations)
- Fixed all 15 ESLint errors (browser globals, ts-ignore fixes)
- Fixed floating point precision in costAnalytics tests
- 564/582 tests passing (96.9%)

Total: 22 CLI commands, 10 compiler features, 0 TS/ESLint errors

--- a/docs-site/package.json
+++ b/docs-site/package.json
@@ -1,7 +1,7 @@
 {
     "name": "milesproject-docs",
     "version": "1.0.0",
-    "description": "Documentation site for Miles Project",
+    "description": "Documentation site for G-Rump",
     "license": "MIT",
     "main": "index.js",
     "scripts": {
