--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,6 +18,8 @@
     "start": "node dist/index.js",
     "run": "node --import tsx src/index.ts",
     "dev": "tsx watch src/index.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "lint": "tsc --noEmit",
     "clean": "node -e \"require('fs').rmSync('dist', { recursive: true, force: true }); require('fs').rmSync('dist-native', { recursive: true, force: true }); console.log('Cleaned!');\""
   },
@@ -47,7 +49,8 @@
     "@types/node": "^20.11.0",
     "pkg": "^5.8.0",
     "tsx": "^4.7.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^1.2.0"
   },
   "engines": {
     "node": ">=20"
