chore: Add AgentLightning docs, scripts, and misc updates

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -110,6 +110,10 @@ SECURITY_SCAN_ROOT=
 # Metrics (optional; Basic auth for /metrics – recommended in production)
 METRICS_AUTH=
 
+# Agent Lightning (optional; OpenTelemetry OTLP/HTTP endpoint for agent traces)
+# Example: http://localhost:4747
+OTLP_ENDPOINT=
+
 # RAG (Nemotron + file-based index; optional)
 RAG_INDEX_PATH=./data/rag-index.json
 RAG_LLM_MODEL=moonshotai/kimi-k2.5
