feat: Windows/Docker-first architecture, marketing polish, Century Club guide
- Fix CLI shipit test timeout using fake timers
- Add DOMPurify for SVG sanitization in DiagramRenderer
- Update README: Windows Desktop + Docker as primary platforms, macOS coming soon
- Update README Mermaid chart to show full system architecture (AgentLightning, Guardrails, Eval, SHIP workflow)
- Create docs/CENTURY_CLUB_GUIDE.md with roadmap to 100/100 score
- Polish marketing site: skip-link, focus states, mobile menu, OG/Twitter meta, favicon
- Reorder install boxes: Windows > Docker > NPM > macOS (coming soon)
- Add accessibility improvements (ARIA labels, touch targets, focus outlines)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,9 @@
   "dependencies": {
     "@grump/shared-types": "*",
     "@supabase/supabase-js": "^2.91.1",
+    "@types/dompurify": "^3.0.5",
     "diff": "^5.2.0",
+    "dompurify": "^3.3.1",
     "jspdf": "^4.0.0",
     "mermaid": "^10.9.0",
     "shiki": "^1.1.0",
