feat: Add mega enhancement features - Docker, Cloud, Themes, Onboarding, VSCode extension
- Add Docker Panel UI with container management (DockerPanel.svelte)
- Add Cloud Dashboard for AWS/GCP/Azure provisioning (CloudDashboard.svelte)
- Add theme system with light/dark modes (themes.css, ThemeToggle.svelte)
- Add iOS-style onboarding components (OnboardingCarousel, Slide, Button, Dots)
- Add animations library (animations.css)
- Wire Docker/Cloud buttons into SessionsSidebar
- Add Electron app with Docker IPC handlers
- Add VSCode extension scaffolding
- Add backend services: jiraService, deployService, cloudProvisioningService, baasService
- Fix Vercel deployment: TypeScript errors, build order, 250MB size limit
- Update vercel.json with proper build commands and .vercelignore

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "MIT",
   "scripts": {
     "build": "npm run build --prefix frontend",
+    "build:packages": "npm run build --prefix packages/shared-types && npm run build --prefix packages/ai-core",
+    "vercel-build": "npm run build:packages && npm run build --prefix backend",
     "check-all": "npm run type-check --prefix backend && npm run type-check --prefix frontend && npm run lint --prefix backend && npm run lint --prefix frontend",
     "lint": "npm run lint --prefix frontend && npm run lint --prefix backend",
     "lint:fix": "npm run lint:fix --prefix frontend && npm run lint:fix --prefix backend",
