--- a/backend/package.json
+++ b/backend/package.json
@@ -47,7 +47,6 @@
   "dependencies": {
     "@grump/ai-core": "*",
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.42.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.52.0",
     "@opentelemetry/resources": "^1.28.0",
     "@opentelemetry/sdk-node": "^0.211.0",
@@ -57,12 +56,10 @@
     "@types/archiver": "^7.0.0",
     "archiver": "^7.0.1",
     "async-retry": "^1.3.3",
-    "better-sqlite3": "^11.7.0",
     "bullmq": "^5.34.5",
     "cls-rtracer": "^2.6.3",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
@@ -74,11 +71,15 @@
     "opossum": "^5.0.1",
     "pino": "^10.3.0",
     "pino-http": "^11.0.0",
-    "playwright": "^1.58.0",
     "prom-client": "^15.1.3",
     "rate-limit-redis": "^4.3.1",
     "stripe": "^17.4.0",
     "zod": "^3.22.4"
+  },
+  "optionalDependencies": {
+    "playwright": "^1.58.0",
+    "better-sqlite3": "^11.7.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.42.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
