--- a/vercel.json
+++ b/vercel.json
@@ -5,14 +5,19 @@
   "public": true,
   "cleanUrls": true,
   "trailingSlash": false,
+  "installCommand": "npm install",
+  "buildCommand": "npm run build:packages && cd backend && npm run build",
   "builds": [
     {
       "src": "marketing-site/**",
       "use": "@vercel/static"
     },
     {
-      "src": "backend/package.json",
-      "use": "@vercel/node"
+      "src": "backend/dist/index.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["backend/dist/**"]
+      }
     }
   ],
   "routes": [
