--- a/electron/package.json
+++ b/electron/package.json
@@ -5,10 +5,11 @@
   "main": "dist/main.js",
   "author": "G-Rump Team",
   "license": "MIT",
-  "scripts": {
+"scripts": {
     "build": "tsc",
     "start": "electron dist/main.js",
     "dev": "tsc -w",
+    "generate-icons": "node scripts/generate-icons.js",
     "package": "electron-builder"
   },
   "dependencies": {
@@ -19,6 +20,9 @@
     "@types/node": "^20.10.0",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
+    "png-to-ico": "^3.0.1",
+    "sharp": "^0.34.5",
+    "to-ico": "^1.1.5",
     "typescript": "^5.3.0"
   },
   "build": {
@@ -34,16 +38,25 @@
     ],
     "mac": {
       "category": "public.app-category.developer-tools",
-      "icon": "public/icon.icns",
-      "target": ["dmg", "zip"]
+      "icon": "public/icon.png",
+      "target": [
+        "dmg",
+        "zip"
+      ]
     },
     "win": {
       "icon": "public/icon.ico",
-      "target": ["nsis", "portable"]
+      "target": [
+        "nsis",
+        "portable"
+      ]
     },
     "linux": {
       "icon": "public/icon.png",
-      "target": ["AppImage", "deb"]
+      "target": [
+        "AppImage",
+        "deb"
+      ]
     }
   }
 }
