--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,6 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:ci": "playwright test --reporter=json --outputFile=test-results/e2e-results.json",
     "test:e2e:debug": "playwright test --debug",
-
     "deploy:prod": "vercel --prod",
     "deploy:preview": "vercel",
     "env:add": "vercel env add",
@@ -50,7 +49,6 @@
     "@eslint/js": "^9.39.2",
     "@playwright/test": "^1.58.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
-
     "@types/node": "^20.19.30",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
     "@typescript-eslint/parser": "^8.53.1",
@@ -80,6 +78,7 @@
   "build": {
     "appId": "com.grump.app",
     "productName": "G-Rump",
+    "electronVersion": "28.0.0",
     "directories": {
       "output": "electron-dist"
     },
