--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,11 @@
     "preview": "vite preview",
     "type-check": "svelte-check --tsconfig ./tsconfig.json",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:coverage:report": "vitest run --coverage && open coverage/index.html"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.1",
@@ -21,14 +25,17 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
     "@typescript-eslint/parser": "^8.53.1",
+    "@vitest/coverage-v8": "^1.6.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-svelte": "^3.14.0",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "svelte-check": "^3.8.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vitest": "^1.6.0"
   }
 }
